Fix: v-model example overflow problem

--- a/themes/vue/source/css/_demo.styl
+++ b/themes/vue/source/css/_demo.styl
@@ -37,6 +37,7 @@
   p
     margin: 0 !important
     padding: 0 !important
+    word-break: break-all
   textarea
     width: 100%
     resize: vertical
